--- a/index.html
+++ b/index.html
@@ -769,10 +769,9 @@
         </div>
         <div class="hero-image">
           <img
-            src="/images/api-attachments-g6dsh2rpaoiss9wgwxstf.png"
+            src="./images/profile.png"
             alt="Shadei Sabino - Full-Stack Developer"
             class="profile-image"
-            onerror="this.src='https://placehold.co/400x400?text=Shadei+Sabino+Full-Stack+Developer+Professional+Portrait'"
           />
         </div>
       </div>
