--- a/index.html
+++ b/index.html
@@ -755,7 +755,7 @@
       <div class="hero-content">
         <div class="hero-text">
           <h1>Hi, I'm <span class="gradient-text">Shadei Sabino</span></h1>
-          <p class="subtitle">Full-Stack Developer</p>
+          <p class="subtitle">Senior Full-Stack Developer</p>
           <p class="description">
             Full-stack developer with 9+ years of experience building secure
             enterprise applications, cloud solutions, and automated workflows. I
